--- a/Recycler/app/src/main/res/values/strings.xml
+++ b/Recycler/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Recycler</string>
+    <string name="position">position: %d</string>
     <string name="price_jean">$ %.2f</string>
 </resources>
